crates/pandalang/src/snapshots/pandalang__eval__tests__evals@int__double_digit.panda.snap
---
source: crates/pandalang/src/eval.rs
expression: test(path)
input_file: crates/pandalang/src/snapshot_inputs/int/double_digit.panda
---
Ok(
    Int(
        Int {
            n: 10,
        },
    ),
)
