crates/pandalang/src/snapshots/pandalang__eval__tests__evals@int__int.panda.snap
---
source: crates/pandalang/src/eval.rs
expression: test(path)
input_file: crates/pandalang/src/snapshot_inputs/int/int.panda
---
Ok(
    Int(
        Int {
            n: 0,
        },
    ),
)
