crates/pandalang/src/snapshots/pandalang__eval__tests__evals@int__negative.panda.snap
---
source: crates/pandalang/src/eval.rs
expression: source
input_file: crates/pandalang/src/snapshot_inputs/int/negative.panda
---
Int(
    Int {
        n: -37,
    },
)
